# EmberOS

./: .gitignore  EmberOS-Install.bat  EmberOS-Installer.hta  EmberOS-Setup-FIXED.hta  EmberOS-Setup-GUI.bat  EmberOS-Setup.vbs  INSTALL.md  README.md  README.rst  USER_GUIDE.md  Windows-Installation.md  debug_ember.py  install.sh  install_windows.ps1  pyproject.toml  restart_gui.sh  test_document_creation.py  test_ember.py
configs/: emberos.toml
installer/: build_installer.py  windows_installer.py
packaging/: PKGBUILD  ember-llm-manager-bitnet-final.sh  ember-llm-manager-bitnet.sh  ember-llm-manager-fixed.sh  ember-llm-manager-portable.sh  ember-llm-manager.sh  ember-llm.service  emberd.service  emberos.desktop  org.ember.Agent.service
src/emberos/: __init__.py
src/emberos/cli/: __init__.py  client.py  commands.py  repl.py  windows_client.py
src/emberos/core/: __init__.py  config.py  constants.py
src/emberos/daemon/: __init__.py  context_monitor.py  dbus_server.py  llm_orchestrator.py  planner.py  service.py  task_manager.py  windows_server.py  workflow_orchestrator.py
src/emberos/gui/: __init__.py  app.py  main_window.py
src/emberos/gui/widgets/: __init__.py  chat.py  context_ribbon.py  input_deck.py  status_ticker.py  title_bar.py  tool_card.py
src/emberos/memory/: __init__.py  engine.py  sqlite_store.py  vector_store.py
src/emberos/platform/: __init__.py  linux_service.py  windows_service.py
src/emberos/tools/: __init__.py  base.py  document_reader.py  executor.py  permissions.py  registry.py
src/emberos/tools/builtin/: __init__.py  applications.py  documents.py  filesystem.py  notes.py  system.py
