[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emberos"
version = "1.0.0"
description = "EmberOS - An AI-native layer for Arch Linux"
readme = "README.rst"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "EmberOS Team", email = "ember@emberos.org"}
]
keywords = ["ai", "agent", "linux", "assistant", "llm", "archlinux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: System :: Operating System",
]
requires-python = ">=3.11"
dependencies = [
    # Core
    "dbus-next>=0.2.3",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",

    # GUI
    "PyQt6>=6.6.0",
    "PyQt6-WebEngine>=6.6.0",

    # CLI
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "click>=8.1.7",

    # Database
    "aiosqlite>=0.19.0",

    # System Integration
    "psutil>=5.9.7",
    "watchdog>=3.0.0",
    "python-xlib>=0.33",

    # Utilities
    "appdirs>=1.4.4",
    "python-dateutil>=2.8.2",

    # Vector store (lightweight alternative)
    "numpy>=1.26.0",
]

[project.optional-dependencies]
# Full vector search support (requires Python 3.11 or 3.12, not 3.14 yet)
vectordb = [
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-qt>=4.2.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[project.scripts]
ember = "emberos.cli:main"
ember-ui = "emberos.gui:main"
emberd = "emberos.daemon:main"

[project.gui-scripts]
ember-ui = "emberos.gui:main"

[project.urls]
Homepage = "https://emberos.org"
Documentation = "https://docs.emberos.org"
Repository = "https://github.com/emberos/emberos"
Issues = "https://github.com/emberos/emberos/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
emberos = [
    "configs/*.toml",
    "configs/*.yaml",
    "assets/*.png",
    "assets/*.svg",
    "tools/manifests/*.yaml",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

